[gd_scene load_steps=6 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://godotRes/left-pallete.png" type="Texture" id=2]
[ext_resource path="res://godotRes/right-pallete.png" type="Texture" id=3]
[ext_resource path="res://godotRes/ball.png" type="Texture" id=4]
[ext_resource path="res://godotRes/separator.png" type="Texture" id=5]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="leftPlayer" type="Sprite" parent="."]
position = Vector2( 40, 200 )
texture = ExtResource( 2 )

[node name="rightPlayer" type="Sprite" parent="."]
position = Vector2( 600, 200 )
texture = ExtResource( 3 )

[node name="ball" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 4 )

[node name="leftScore" type="RichTextLabel" parent="."]
margin_left = 28.4318
margin_top = 25.8471
margin_right = 68.4318
margin_bottom = 65.8471
custom_colors/default_color = Color( 1, 1, 1, 1 )

[node name="rightScore" type="RichTextLabel" parent="."]
margin_left = 553.128
margin_top = 33.6012
margin_right = 593.128
margin_bottom = 73.6012
custom_colors/default_color = Color( 1, 1, 1, 1 )

[node name="separator" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 5 )
